5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1637_2711.log
== TEST (2019-04-10 10:37:49) 
-- CODE:
valor= float(input("quantia:"))
tickets= int(input("quantidade:"))
preco= float(input("tickets:"))
onibus= int(input("quantidade:"))
passe= float(input("valor:"))
total= (tickets * preco) + (onibus * passe)

if(valor >= total):
	print(SUFICIENTE)
else:
	print(INSUFICIENTE)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(SUFICIENTE)
NameError: name 'SUFICIENTE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 10:38:09) 
-- CODE:
valor= float(input("quantia:"))
tickets= int(input("quantidade:"))
preco= float(input("tickets:"))
onibus= int(input("quantidade:"))
passe= float(input("valor:"))
total= (tickets * preco) + (onibus * passe)

if(valor >= total):
	print(SUFICIENTE)
else:
	print(INSUFICIENTE)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(SUFICIENTE)
NameError: name 'SUFICIENTE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 10:38:51) 
-- CODE:
valor= float(input("quantia:"))
tickets= int(input("quantidade:"))
preco= float(input("tickets:"))
onibus= int(input("quantidade:"))
passe= float(input("valor:"))
total= (tickets * preco) + (onibus * passe)

if(valor >= total):
	print(SUFICIENTE)
else:
	print(INSUFICIENTE)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(SUFICIENTE)
NameError: name 'SUFICIENTE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 10:39:39) 
-- CODE:
valor= float(input("quantia:"))
tickets= int(input("quantidade:"))
preco= float(input("tickets:"))
onibus= int(input("quantidade:"))
passe= float(input("valor:"))
total= (tickets * preco) + (onibus * passe)

if(valor > total):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 10:40:01) 
-- CODE:
valor= float(input("quantia:"))
tickets= int(input("quantidade:"))
preco= float(input("tickets:"))
onibus= int(input("quantidade:"))
passe= float(input("valor:"))
total= (tickets * preco) + (onibus * passe)

if(valor > total):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.148386
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
